[gd_scene load_steps=6 format=3 uid="uid://b0r5v5p4371s7"]

[ext_resource type="Script" path="res://pelamela.gd" id="1_lef5b"]
[ext_resource type="Texture2D" uid="uid://uqkitohixqv3" path="res://Tyranomon.png" id="2_rntum"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oyplv"]
size = Vector2(6, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p3p65"]
size = Vector2(6, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rqkc0"]
size = Vector2(6, 4)

[node name="pelamela" type="CharacterBody2D"]
collision_layer = 32
collision_mask = 0
script = ExtResource("1_lef5b")

[node name="futuo" type="Sprite2D" parent="."]
position = Vector2(5.96046e-08, -1.19209e-07)
scale = Vector2(0.00626305, 0.00681431)
texture = ExtResource("2_rntum")

[node name="pelamela" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 21
monitoring = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="pelamela"]
shape = SubResource("RectangleShape2D_oyplv")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_p3p65")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -3.0
offset_top = -2.0
offset_right = 3.0
offset_bottom = 2.0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_rqkc0")

[connection signal="area_entered" from="pelamela" to="." method="_on_notrolo_area_entered" flags=18]
[connection signal="area_entered" from="pelamela" to="." method="_on_pelamela_area_entered"]
[connection signal="body_entered" from="pelamela" to="." method="_on_pelamela_body_entered"]
[connection signal="body_entered" from="pelamela" to="." method="_on_notrolo_body_entered" flags=18]
[connection signal="body_entered" from="pelamela" to="pelamela" method="_on_body_entered" flags=18]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited" flags=18]
